// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for pipeline services Create pipeline works 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "biomage-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "name": "biomage-test",
      },
    },
  ],
}
`;

exports[`test for pipeline services Create pipeline works 2`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "loggingConfiguration": Object {
        "level": "OFF",
      },
      "name": "biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "tags": Array [
        Object {
          "key": "experimentId",
          "value": "testExperimentId",
        },
        Object {
          "key": "clusterEnv",
          "value": "test",
        },
        Object {
          "key": "sandboxId",
          "value": undefined,
        },
      ],
      "type": "STANDARD",
    },
  },
]
`;

exports[`test for pipeline services Create pipeline works 3`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "input": "{\\"samples\\":[{\\"sampleUuid\\":\\"sample-KO\\",\\"index\\":0}]}",
      "stateMachineArn": "test-machine",
      "traceHeader": undefined,
    },
  },
]
`;

exports[`test for pipeline services Parses processingConfig correctly 1`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "Comment": "Pipeline for clusterEnv 'test'",
      "StartAt": "DeleteCompletedPipelineWorker",
      "States": Object {
        "ConfigureEmbedding": Object {
          "Next": "EndOfPipeline",
          "Parameters": Object {
            "config": Object {},
            "experimentId": "testExperimentId",
            "sampleUuid": "",
            "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
            "taskName": "configureEmbedding",
          },
          "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
          "ResultPath": null,
          "TimeoutSeconds": 300,
          "Type": "Task",
        },
        "DataIntegration": Object {
          "Next": "ConfigureEmbedding",
          "Parameters": Object {
            "config": Object {},
            "experimentId": "testExperimentId",
            "sampleUuid": "",
            "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
            "taskName": "dataIntegration",
          },
          "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
          "ResultPath": null,
          "TimeoutSeconds": 300,
          "Type": "Task",
        },
        "DeleteCompletedPipelineWorker": Object {
          "Comment": "Deletes the previous server pipeline HelmRelease (Service+Job).",
          "Next": "LaunchNewPipelineWorker",
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Method": "DELETE",
            "Path": "/apis/helm.fluxcd.io/v1/namespaces/pipeline-test-namespace/helmreleases",
            "QueryParameters": Object {
              "labelSelector": Array [
                "type=pipeline",
              ],
            },
          },
          "Resource": "arn:aws:states:::eks:call",
          "ResultPath": null,
          "Type": "Task",
        },
        "EndOfPipeline": Object {
          "End": true,
          "Type": "Pass",
        },
        "Filters": Object {
          "ItemsPath": "$.samples",
          "Iterator": Object {
            "StartAt": "ClassifierFilter",
            "States": Object {
              "CellSizeDistributionFilter": Object {
                "Next": "MitochondrialContentFilter",
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "cellSizeDistribution",
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 300,
                "Type": "Task",
              },
              "ClassifierFilter": Object {
                "Next": "CellSizeDistributionFilter",
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "classifier",
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 300,
                "Type": "Task",
              },
              "DoubletScoresFilter": Object {
                "Next": "EndOfMap",
                "Parameters": Object {
                  "config": Object {
                    "filterSettings": Object {
                      "oneSetting": 1,
                    },
                    "oneSample": Object {
                      "filterSettings": Object {
                        "oneSetting": 7,
                      },
                    },
                    "otherSample": Object {
                      "filterSettings": Object {
                        "oneSetting": 15,
                      },
                    },
                  },
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "doubletScores",
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 300,
                "Type": "Task",
              },
              "EndOfMap": Object {
                "End": true,
                "Type": "Pass",
              },
              "MitochondrialContentFilter": Object {
                "Next": "NumGenesVsNumUmisFilter",
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "mitochondrialContent",
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 300,
                "Type": "Task",
              },
              "NumGenesVsNumUmisFilter": Object {
                "Next": "DoubletScoresFilter",
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "numGenesVsNumUmis",
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 300,
                "Type": "Task",
              },
            },
          },
          "MaxConcurrency": 1,
          "Next": "DataIntegration",
          "Type": "Map",
        },
        "LaunchNewPipelineWorker": Object {
          "Catch": Array [
            Object {
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "Next": "Filters",
              "ResultPath": "$.error-info",
            },
          ],
          "Comment": "Attempts to create a Kubernetes Job+Service for the pipeline runner. Will swallow a 409 (already exists) error.",
          "Next": "Filters",
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Method": "POST",
            "Path": "/apis/helm.fluxcd.io/v1/namespaces/pipeline-test-namespace/helmreleases",
            "RequestBody": Object {
              "apiVersion": "helm.fluxcd.io/v1",
              "kind": "HelmRelease",
              "metadata": Object {
                "annotations": Object {
                  "fluxcd.io/automated": "true",
                },
                "labels": Object {},
                "name": "pipeline-testExperimentId",
                "namespace": "pipeline-test-namespace",
              },
              "spec": Object {
                "chart": Object {
                  "git": "git@github.com:biomage-ltd/pipeline",
                  "path": "qc-runner/chart",
                  "ref": "MOCK_REF_PATH",
                },
                "releaseName": "pipeline-testExperimentId",
                "values": Object {
                  "activityArn": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                  "awsAccountId": "test-account-id",
                  "awsRegion": "eu-west-1",
                  "clusterEnv": "test",
                  "experimentId": "testExperimentId",
                  "image": "MOCK_IMAGE_PATH",
                  "namespace": "pipeline-test-namespace",
                },
              },
            },
          },
          "Resource": "arn:aws:states:::eks:call",
          "ResultPath": null,
          "Retry": Array [
            Object {
              "BackoffRate": 2,
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "IntervalSeconds": 1,
              "MaxAttempts": 2,
            },
          ],
          "Type": "Task",
        },
      },
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "biomage-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "name": "biomage-test",
      },
    },
  ],
}
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 2`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "loggingConfiguration": Object {
        "level": "OFF",
      },
      "name": "biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "tags": Array [
        Object {
          "key": "experimentId",
          "value": "testExperimentId",
        },
        Object {
          "key": "clusterEnv",
          "value": "test",
        },
        Object {
          "key": "sandboxId",
          "value": undefined,
        },
      ],
      "type": "STANDARD",
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 3`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "stateMachineArn": "arn:aws:states:eu-west-1:test-account-id:stateMachine:biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 4`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "input": "{\\"samples\\":[{\\"sampleUuid\\":\\"sample-KO\\",\\"index\\":0}]}",
      "stateMachineArn": "arn:aws:states:eu-west-1:test-account-id:stateMachine:biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "traceHeader": undefined,
    },
  },
]
`;
